<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aa"
    tools:context="com.example.anupmrzn.myapp.MainActivity">

    <TextView
        android:id="@+id/tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="72dp"
        android:text="@string/tittle"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_address"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address"
        android:textSize="20sp"
        android:drawableEnd="@drawable/user"
        android:textColorHint="@android:color/white"
        android:layout_below="@id/tittle"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/password"
        android:textColorHint="@android:color/white"
        android:layout_below="@id/email_address"
        android:drawableEnd="@drawable/pw"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textPassword"
        />


    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Did_you_forget_your_password"
        android:text="@string/text1"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_below="@id/login"

        />


    <Button
        android:id="@+id/fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Did_you_forget_your_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="@android:color/transparent"
        android:text="@string/fb"
        android:textColor="@android:color/white"

        />



</RelativeLayout>
